Fix various deprecation and Errorprone warnings (#3488)
* Fix various deprecation and Errorprone warnings

* Ignore Errorprone warnings for generated code